fix: update code

--- a/index.html
+++ b/index.html
@@ -81,28 +81,32 @@
         <img src="./image/flight.jpg" alt="ballon">
         <div class="service-item-text">
           <h4>Flight Booking</h4>
-          <p>Share your service offerings here. Give your prospective clients an overview of why they should use it.</p>
+          <p>Whether you’re used to the pointy end of the plane, or not, our specially negotiated entertainment fares
+            will make you feel like a VIP. </p>
         </div>
       </div>
       <div class="service-item">
         <img src="./image/activity.jpg" alt="ballon">
         <div class="service-item-text">
           <h4>Tours & Activities</h4>
-          <p>Share your service offerings here. Give your prospective clients an overview of why they should use it.</p>
+          <p>Rest easy with negotiated entertainment rates offering up to 30% savings. </p>
         </div>
       </div>
       <div class="service-item">
         <img src="./image/air-transfer.jpg" alt="ballon">
         <div class="service-item-text">
           <h4>Airport Transfers</h4>
-          <p>Share your service offerings here. Give your prospective clients an overview of why they should use it.</p>
+          <p>Enjoy a first-class ride to the airport with our trained drivers and catch your flight on time. We help you
+            beat the traffic even during peak times and ensure that you experience a hassle-free and fast journey to the
+            airport with our Melbourne cabs.</p>
         </div>
       </div>
       <div class="service-item">
         <img src="./image/hotel.jpg" alt="ballon">
         <div class="service-item-text">
           <h4>Hotel Bookings</h4>
-          <p>Share your service offerings here. Give your prospective clients an overview of why they should use it.</p>
+          <p>Collaborating with major hotels, it can find the most suitable hotel based on your needs, and you can enjoy
+            membership discounts. </p>
         </div>
       </div>
     </div>
