--- a/pages/about-us/about.html
+++ b/pages/about-us/about.html
@@ -56,8 +56,80 @@
     </div>
   </section>
 
-  <section class="about-team-containner">
+  <section class="about-team-section">
+    <h1>Meet our Team</h1>
+    <p class="font-italic">Our team is full of people that are extremely passionate about making your Australian journey
+      as good as it
+      possibly can be. They have travel experience as travellers, but also within the industry too. Our team has over
+      35+ years of travel industry experience, meaning we really are Australia experts and you’re in the best possible
+      hands. </p>
+    <div class="team-containner">
+      <div class="team-item">
+        <div class="team-item-image team-item-bg1"></div>
+        <div class="team-item-text light-bgcolor">
+          <h4 class="dark-color">Guide Team</h4>
+          <p>Our guides make sure you have the most incredible time on tour. Throughout the week, they’ll be showing you
+            around the city, sharing important cultural knowledge, giving their best travel tips and will essentially
+            become your new favourite older brother or sister!</p>
+        </div>
+      </div>
+      <div class="team-item">
+        <!-- <img src="../../image/commuty-team.jpg" alt="guide-team"> -->
+        <div class="team-item-text light-bgcolor">
+          <h4 class="dark-color">Community Team</h4>
+          <p>Need help with travel plans, someone to settle your nerves or general questions about Australia? The
+            community team will be your go to. Our incredible team all have experience travelling Australia and around
+            the world, making them the perfect people to help plan your onward adventures after your Welcome to Travel
+            tour!</p>
+        </div>
+        <div class="team-item-image team-item-bg2"></div>
+      </div>
+      <div class="team-item">
+        <div class="team-item-image team-item-bg3"></div>
+        <div class="team-item-text light-bgcolor">
+          <h4 class="dark-color">Reservations Team</h4>
+          <p>The reservations team are the reason you can enjoy your tour stress free. From booking your hostels,
+            activities, amending date changes and booking any extra nights, reservations will make sure you know exactly
+            where you need to be from the moment you step off the plane to the very end of your tour.</p>
+        </div>
+      </div>
+      <div class="team-item">
+        <div class="team-item-text light-bgcolor">
+          <h4 class="dark-color">Marketing & Bookkeeping Team</h4>
+          <p>Did you first hear about Welcome to Travel on social? The marketing team do their best to help inspire
+            future backpackers to make the ultimate decision and book the trip of a lifetime to Australia! Our
+            bookkeeping team makes sure everything runs smoothly behind the scenes.</p>
+        </div>
+        <div class="team-item-image team-item-bg4"></div>
+      </div>
+    </div>
 
+  </section>
+
+  <section class="about-customer-section light-bgcolor">
+    <h2>Happy Customer</h2>
+    <div class="customer-container">
+      <div class="customer-item">
+        <p>Kay,Chole, Janet and the team have so much experience. the angency can help you in all your plans to make
+          travel as easy as it should be</p>
+        <div class="customer-info">
+          <img src="../../image/user1.jpg"><span>joy</span>
+        </div>
+      </div>
+      <div class="customer-item">
+        <p>Kay,Chole, Janet and the team have so much experience. the angency can help you in all your plans to make
+          travel as easy as it should be</p>
+        <div class="customer-info">
+          <img src="../../image/user2.png"><span>joy</span>
+        </div>
+      </div>
+      <div class="customer-item">
+        <p>Kay,Chole, Janet and the team have so much experience. the angency can help you in all your plans to make
+          travel as easy as it should be</p>
+        <div class="customer-info">
+          <img src="../../image/use3.png"><span>joy</span>
+        </div>
+      </div>
   </section>
 
   <script src="about.js"></script>
