--- a/index.html
+++ b/index.html
@@ -78,34 +78,34 @@
     <h1>We'll handle your trip for you</h1>
     <div class="service-containner">
       <div class="service-item">
-        <img src="./image/flight.jpg" alt="ballon">
+        <div class="service-item-image service-item-bg1"></div>
         <div class="service-item-text">
           <h4>Flight Booking</h4>
-          <p>Whether you’re used to the pointy end of the plane, or not, our specially negotiated entertainment fares
+          <p class="text-ellipsis">Whether you’re used to the pointy end of the plane, or not, our specially negotiated entertainment fares
             will make you feel like a VIP. </p>
         </div>
       </div>
       <div class="service-item">
-        <img src="./image/activity.jpg" alt="ballon">
+        <div class="service-item-image service-item-bg2"></div>
         <div class="service-item-text">
           <h4>Tours & Activities</h4>
-          <p>Rest easy with negotiated entertainment rates offering up to 30% savings. </p>
+          <p class="text-ellipsis">To make it easy for you to find exciting offers and packages, we've gathered the best deals on flights, resorts, restaurants, and more. Enjoy peace of mind with entertainment rates offering up to 30% savings </p>
         </div>
       </div>
       <div class="service-item">
-        <img src="./image/air-transfer.jpg" alt="ballon">
+        <div class="service-item-image service-item-bg3"></div>
         <div class="service-item-text">
           <h4>Airport Transfers</h4>
-          <p>Enjoy a first-class ride to the airport with our trained drivers and catch your flight on time. We help you
+          <p class="text-ellipsis">Enjoy a first-class ride to the airport with our trained drivers and catch your flight on time. We help you
             beat the traffic even during peak times and ensure that you experience a hassle-free and fast journey to the
             airport with our Melbourne cabs.</p>
         </div>
       </div>
       <div class="service-item">
-        <img src="./image/hotel.jpg" alt="ballon">
+        <div class="service-item-image service-item-bg4"></div>
         <div class="service-item-text">
           <h4>Hotel Bookings</h4>
-          <p>Collaborating with major hotels, it can find the most suitable hotel based on your needs, and you can enjoy
+          <p class="text-ellipsis">Collaborating with major hotels, it can find the most suitable hotel based on your needs, and you can enjoy
             membership discounts. </p>
         </div>
       </div>
