--- a/pages/about-us/about.html
+++ b/pages/about-us/about.html
@@ -28,10 +28,11 @@
         we are passionate about helping people explore the Melbourne. Our mission is to make travel accessible and
         enjoyable
         for everyone.</p>
-      <button class="color-button"> GET IN touch</button>
+      <button class="color-button" id="touch-button"> GET IN touch</button>
     </div>
   </section>
 
+  <!--action  -->
   <section class="about-action-container">
     <h2>Ready to start planning your next adventure</h2>
     <div class="action-step">
@@ -56,6 +57,7 @@
     </div>
   </section>
 
+  <!-- team -->
   <section class="about-team-section">
     <h1>Meet our Team</h1>
     <p class="font-italic">Our team is full of people that are extremely passionate about making your Australian journey
@@ -106,6 +108,7 @@
 
   </section>
 
+  <!-- customer -->
   <section class="about-customer-section light-bgcolor">
     <h2>Happy Customer</h2>
     <div class="customer-container">
