--- a/pages/contact-us/contact.html
+++ b/pages/contact-us/contact.html
@@ -53,7 +53,7 @@
         <span id="emailError" class="error"></span><br><br>
 
         <label for="message">Message<span>*</span></label><br>
-        <textarea id="message" name="message" placeholder="message" rows="6" cols="60"></textarea><br>
+        <textarea id="message" name="message" placeholder="message"></textarea><br>
         <span id="messageError" class="error"></span><br><br>
         <!-- <input type="submit" value="Submit"> -->
         <button class="color-button" id="submit">Submit</button>
