--- a/pages/contact-us/contact.html
+++ b/pages/contact-us/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MEL TRAVEL contact</title>
+  <title>MEL TRAVEL Contact</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -19,6 +19,7 @@
     <p>We know what it is like trying to arrange your travels, so we want to make it as easy as possible for you. You
       can of course slide into our DM’s but the quickest way to get in touch with us is below
   </section>
+
   <section class="contact-section-container light-bgcolor">
     <div class="contact-text">
       <h3>Contact Us</h3>
